Shang New Live/src/objects/Tower_Block__c.object
<CustomObject>
    <fields>
        <fullName>GFA_SQF__c</fullName>
        <label>GFA (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFA_SQM__c</fullName>
        <formula>GFA_SQF__c  / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GFA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLA_SQF__c</fullName>
        <label>NLA (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLA_SQM__c</fullName>
        <formula>NLA_SQF__c  / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NLA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Storeys_Above_Ground__c</fullName>
        <label>No of Storeys Above Ground</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Storeys__c</fullName>
        <label>No of Storeys</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Tower/Block</relationshipLabel>
        <relationshipName>Tower_Block</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tower/Block</label>
    <nameField>
        <label>Tower/Block Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tower/Block</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>